// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders correctly when closed 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 276px;
  padding-left: 24px;
  padding-right: 24px;
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 3;
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  -webkit-transition: -webkit-transform 300ms;
  transition: transform 300ms;
  margin-top: 64px;
  background-color: #F4F4F4;
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 1px 0 0;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    margin-top: 80px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    overflow: hidden;
  }

  .emotion-0:hover {
    overflow: auto;
  }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-0 {
    overflow: auto;
  }
}

.emotion-1 {
  padding: 48px;
}

@media screen {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #243853;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 16px;
  height: 16px;
  fill: #243853;
}

.emotion-7 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-8:last-child {
  margin-bottom: 24px;
}

<div
    class="emotion-0"
    data-testid="sidebar"
    role="complementary"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
            data-testid="close-icon"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="Sidebar"
      class="emotion-7"
      role="navigation"
    >
      <ul
        class="emotion-8"
        role="list"
      />
    </nav>
  </div>
  .emotion-0 {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  right: 100%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 0.6s,right 0.3s;
  transition: opacity 0.6s,right 0.3s;
  z-index: 2;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

<div
    class="emotion-0"
    data-testid="overlay"
  />
</DocumentFragment>
`;

exports[`Sidebar renders correctly when open 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 276px;
  padding-left: 24px;
  padding-right: 24px;
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 3;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 300ms;
  transition: transform 300ms;
  margin-top: 64px;
  background-color: #F4F4F4;
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 1px 0 0;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    margin-top: 80px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    overflow: hidden;
  }

  .emotion-0:hover {
    overflow: auto;
  }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-0 {
    overflow: auto;
  }
}

.emotion-1 {
  padding: 48px;
}

@media screen {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #243853;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 16px;
  height: 16px;
  fill: #243853;
}

.emotion-7 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-8:last-child {
  margin-bottom: 24px;
}

<div
    class="emotion-0"
    data-testid="sidebar"
    open=""
    role="complementary"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
            data-testid="close-icon"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="Sidebar"
      class="emotion-7"
      role="navigation"
    >
      <ul
        class="emotion-8"
        role="list"
      />
    </nav>
  </div>
  .emotion-0 {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  overflow: auto;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.6s,right 0.3s;
  transition: opacity 0.6s,right 0.3s;
  z-index: 2;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

<div
    class="emotion-0"
    data-testid="overlay"
  />
</DocumentFragment>
`;
